fix(card-stack-animation): hide horizontal overflow of body

--- a/013 - Card Stack Animation/src/styles/index.scss
+++ b/013 - Card Stack Animation/src/styles/index.scss
@@ -48,6 +48,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .stack {
